<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_mat"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/moon_bold"
        android:gravity="center"
        android:text="@string/log_in"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="50dp"
        android:hint="@string/username"
        android:drawableStart="@drawable/ic_person_black"
        android:drawablePadding="25dp"
        android:drawableTint="#B8B8B8"
        android:textColor="#E9E9E9"
        android:background="@drawable/border_line_white"
        android:padding="12dp"
        android:textColorHint="#B8B8B8"
        android:inputType="textPersonName"
        android:layout_marginEnd="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextFields"
        tools:targetApi="m"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/border_line_white"
        android:drawableStart="@drawable/ic_lock_black"
        android:drawablePadding="25dp"
        android:drawableTint="#B8B8B8"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="#E9E9E9"
        android:textColorHint="#B8B8B8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:targetApi="m"
        android:importantForAutofill="no" />

    <RadioGroup
        android:id="@+id/rg_main"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp" >

        <RadioButton
            android:id="@+id/rb_user"
            android:text="@string/user"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableTint="#B8B8B8"
            android:textColor="#E9E9E9"
            android:textColorHint="#B8B8B8"
            android:layout_marginEnd="10dp"
            android:background="@drawable/border_line_white"
            tools:targetApi="m" />

        <RadioButton
            android:id="@+id/rb_seller"
            android:text="@string/seller"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableTint="#B8B8B8"
            android:textColor="#E9E9E9"
            android:textColorHint="#B8B8B8"
            android:background="@drawable/border_line_white"
            tools:targetApi="m" />
    </RadioGroup>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/moon_regular"
        android:text="@string/log_in"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/signup"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_style"
        android:fontFamily="@font/moon_bold"
        android:text="@string/registration"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />


</LinearLayout>